# sysevents

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md
src/: cli.rs  date.rs  error.rs  events.rs  journal.rs  main.rs  output.rs  patterns.rs
